<resources>
    <string name="app_name">MediJourney</string>
    <string name="welcome_to_medijourney">Welcome to MediJourney</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="login_by_facebook">login by facebook</string>
    <string name="login_by_google">login by google</string>
    <string name="login_by_zalo">login by zalo</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="get_started">Get Started</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="sign_up_by_facebook">Sign up by facebook</string>
    <string name="sign_up_by_google">Sign up by google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email_format_invalid">Your email format isn\'t valid</string>
    <string name="password_length_short">Your password must contain more 6 characters</string>
    <string name="enter_your_mobile_phone_otp">Enter your mobile phone and OTP</string>
    <string name="send_confirmation_code_description">"We'll promptly send you a confirmation code. Once received, kindly input the OTP within your message for authentication."</string>
    <string name="enter_your_mobile_phone">Enter your mobile phone</string>
    <string name="next">Next</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="phone_number_format_invalid">Your phone number format isn\'t valid</string>
    <string name="sign_in_by_telephone_number">Sign in by telephone number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="health_center">Health Center</string>
    <string name="notification">Notification</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="failed_authentication_error_message">Authentication failed. Please check your credentials and try again.</string>
    <string name="user_name">User name</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="edit_your_avatar">Edit your avatar</string>
    <string name="edit_profile">Edit profile</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="kindly_grant_the_necessary_permissions">Kindly grant the necessary permissions</string>
    <string name="setting">Setting</string>
    <string name="cancel">Cancel</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="policy_privacy">Policy Privacy</string>
    <string name="term_of_service">Terms of Service</string>
    <string name="vn">Vietnam</string>
    <string name="jp">Japan</string>
    <string name="us">United States</string>
    <string name="ja">Japanese</string>
    <string name="en">English</string>
    <string name="vi">Vietnamese</string>
    <string name="manage_onboarding">Manage Onboarding</string>
    <string name="onboarding">Onboarding</string>
    <string name="show_more">Show more</string>
    <string name="medi_journey">MEDIJOURNEY</string>
    <string name="deactivate_account_prompt">Would you like to deactive your account instead?</string>
    <string name="deletion_permanent_message">Account deletion is permanent and cannot be undone.</string>
    <string name="account_deactivation">Account Deactivation</string>
    <string name="account_deactivation_description">Your profile, data, and settings will be preserved, and can be recovered if necessary.</string>
    <string name="account_deletion">Account Deletion</string>
    <string name="account_deletion_description">All of your data will be permanently deleted. Account deletion cannot be undone</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="touch_id">Touch ID</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="confirm">Confirm</string>
    <string name="advanced_security">Advanced Security</string>
    <string name="otp_authentication_process_description">To activate OTP authentication, please enable the feature and enter the OTP sent to you via chat within 1 minute. If the OTP expires, you can request a new one by tapping resend.</string>
    <string name="log_in_using_biometric_credential">Log in using your biometric credential</string>
    <string name="log_in_biometric_credential_description">MediJourney is using Android biometric authentication to protect your data and reduce the need to re-enter credentials.</string>
    <string name="use_app_password">Use app password</string>
    <string name="or">or</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_not_match">Confirm password is not match</string>
    <string name="authorize">Authorize</string>
    <string name="app_cant_authenticate_using_biometrics">App can\'t authenticate using biometrics.</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="confirm_your_new_password">Confirm your new password</string>
    <string name="new_password_same_current_password">Your new password is same as your current password</string>
    <string name="change_password">Change Password</string>
    <string name="send">Send</string>
    <string name="error_user_deactivation_failed">Failed to deactivate the user. Please try again later.</string>
    <string name="error_user_deletion_failed">Unable to delete the user. Please try again later.</string>
    <string name="otp_authentication">OTP Authentication</string>
    <string name="success">Success</string>
    <string name="change_password_success_message">Your password has been updated successfully!</string>
    <string name="error">Error</string>
    <string name="change_password_failed_message">Password update was unsuccessful. Please try again.</string>
    <string name="account_deactivated_message">Your account has been deactivated. For assistance with reactivating your account, please contact support at 0908441336.</string>
    <string name="membership_plan">Membership Plan</string>
    <string name="add">Add</string>
    <string name="empty_fitness_tracker_description">You haven’t added any Fitness Trackers yet! Start now and take a step towards better health by tracking your progress and staying on top of your fitness goals.</string>
    <string name="enter_your_device_id">Enter your device ID</string>
    <string name="add_fitness_tracker">Add Fitness Tracker</string>
    <string name="fitness_tracker_detail">Fitness Tracker Detail</string>
    <string name="edit_fitness_tracker">Edit Fitness Tracker</string>
    <string name="note">Note</string>
    <string name="note_with_colon">Note :</string>
    <string name="sleep_tracking_report">Sleep Tracking Report</string>
    <string name="hour">Hour</string>
    <string name="na">NA</string>
    <string name="enable_tracking_activity_alert">This feature is not available, please enable it in the fitness tracker edit feature</string>
    <string name="recommend_diet">Recommend Diet</string>
    <string name="macronutrients_source_of_energy">Macronutrients (source of energy)</string>
    <string name="calorie">Calorie</string>
    <string name="water">Water</string>
    <string name="ml">ml</string>
    <string name="micronutrients">Micronutrients</string>
    <string name="mg">mg</string>
    <string name="tap_bar_view_detailed_information">Tap on a bar to view detailed information.</string>
    <string name="nutrition_tracking_report">Nutrition Tracking Report</string>
    <string name="exercise_tracking_report">Exercise Tracking Report</string>
    <string name="recommended_exercises">Recommended Exercises</string>
    <string name="fitness_trackers">Fitness Trackers</string>
    <string name="exercise_plans">Exercise Plans</string>
    <string name="tap_check_out_exercise_plan">Tap to check out the exercise plan</string>
    <string name="empty_exercise_plan_placeholder">You don\'t have any exercise plans yet. Please add one to stay active and reach your fitness goals!</string>
    <string name="exercise_plan_information">Exercise Plan Information</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_exercise_plan_available">No Exercise Plan Available</string>
    <string name="add_exercise_plan">Add Exercise Plan</string>
    <string name="exercise_plan_detail">Exercise Plan Detail</string>
    <string name="exercise_plan_name">Exercise Plan Name</string>
    <string name="the_field_is_required">The field is required</string>
    <string name="exercise_sequence">Exercise Sequence</string>
    <string name="edit_exercise_plan">Edit Exercise Plan</string>
    <string name="save">Save</string>
    <string name="duration_min">Duration: %1$s min</string>
    <string name="recommended_receipts">Recommended Receipts</string>
    <string name="recipe_video">Recipe Video</string>
    <string name="empty_onboarding_item_placeholder">There are currently no onboarding items available for your home setup. To enable them, please navigate to Settings or tap \'Show More\' to turn them on.</string>
    <string name="search_conversation">Search Conversation</string>
    <string name="empty_conversation_placeholder">There are no active conversations at the moment</string>
    <string name="please_grant_camera_permission_title">Please grant camera permission to continue</string>
    <string name="grant_camera_permission">Grant Camera Permission</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="pinned_message">Pinned Message: %1$s</string>
    <string name="empty_message_placeholder">There are no search messages</string>
    <string name="search_message">Search Message</string>
    <string name="health_ai_assistant">Health AI Assistant</string>
    <string name="dashboard_menus">Dashboard Menus</string>
    <string name="empty_dashboard_menu_placeholder">We couldn\'t find any dashboard menus based on your search.</string>
    <string name="medical_booking_list">Medical Booking List</string>
    <string name="add_medical_booking">Add Medical Booking</string>
    <string name="search_hospital">Search Hospital</string>
    <string name="no_hospitals_found">No hospitals found</string>
    <string name="search_specialties">Search Specialties</string>
    <string name="search_doctor">Search Doctor</string>
    <string name="close">Close</string>
    <string name="there_is_no_appointment">There is no appointment</string>
    <string name="doctor_appointments">Doctor\'s Appointments</string>
    <string name="there_is_medical_items">There is medical items</string>
    <string name="medication_list">Medication List</string>
    <string name="buy">Buy</string>
    <string name="total_price">Total Price: %1$s</string>
    <string name="medical_purchase_progress">Medical Purchase Progress</string>
    <string name="medical_knowledge">Medical Knowledge</string>
    <string name="educational_nutrient">Educational Nutrient</string>
    <string name="no_results_found">No results found</string>
</resources>