<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationDashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigationChat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat" />

    <item
        android:id="@+id/navigationHealthCenter"
        android:icon="@drawable/ic_exercises"
        android:title="@string/health_center" />

    <item
        android:id="@+id/navigationNotification"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification" />

    <item
        android:id="@+id/navigationProfile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>


