<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.profile.delete_account.DeleteAccountFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/avatarCardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_profile"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/deactivateAccountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/avatarCardView"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/proximanova_bold"
        android:text="@string/deactivate_account_prompt"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/deletionPermanentMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/deactivateAccountTextView"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/proximanova_regular"
        android:text="@string/deletion_permanent_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/deactivateAccountLinearLayout"
        android:layout_below="@id/deletionPermanentMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_block" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_bold"
                android:text="@string/account_deactivation"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_regular"
                android:text="@string/account_deactivation_description"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteAccountLinearLayout"
        android:layout_below="@id/deactivateAccountLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_delete" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_bold"
                android:text="@string/account_deletion"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_regular"
                android:text="@string/account_deletion_description"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        >

        <Button
            android:id="@+id/deactivateButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/deactivate_account"
            android:textSize="16sp"
            app:backgroundTint="@color/deep_turquoise_blue_color"
            app:cornerRadius="24dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/delete_account"
            android:textSize="16sp"
            app:backgroundTint="@color/design_default_color_error"
            app:cornerRadius="24dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            />

    </LinearLayout>

</RelativeLayout>